# cpp-practice

.github/workflows/: ci.yml
BigInteger/: .gitignore  CMakeLists.txt  main.cpp
BigInteger/include/BigInteger/: BigInteger.hpp
BigInteger/src/: BigInteger.cpp
BigInteger/tests/: test.sh  tests.cpp
Geometry/: CMakeLists.txt
Geometry/include/IShape/: IShape.hpp
Geometry/include/Point/: Point.hpp
Geometry/include/Segment/: Segment.hpp
Geometry/include/Vector/: Vector.hpp
Geometry/src/: Point.cpp  Segment.cpp  Vector.cpp
Geometry/tests/: CMakeLists.txt  test_fixtures.hpp
String/: CMakeLists.txt  main.cpp
String/include/string/: String.hpp
String/src/: String.cpp
String/tests/: test.sh  tests.cpp
